syntax = "proto3";

// The main Rpc service used by clients.
service StoreService {
  // Status asks the server for its status.
  rpc Status(StatusRequest) returns (StatusResponse) {};

  // Query runs an SQL query
  rpc Query(QueryRequest) returns (stream Row) {};
  
  // GetTable fetches the schema for a table
  rpc GetTable(GetTableRequest) returns (GetTableResponse) {};

  // Get a value from store
  rpc Get(GetRequest) returns (GetResponse) {};

  // Set a value to the store
  rpc Set(SetRequest) returns (SetResponse) {};
};

message StatusRequest {};

message StatusResponse {
  string id = 1;
  string version = 2;
  int64 time = 3;
};

message QueryRequest {
  string query = 1;
};

message Row {
  repeated Field field = 1;
};

message Field {
  oneof value {
    bool boolean = 1;
    int64 integer = 2;
    double float = 3;
    string string = 4;
  }
};

message GetRequest {
  string key = 1;
};

message GetResponse {
  string key = 1;
  string value = 2;
};

message SetRequest {
  string key = 1;
  string value = 2;
};

message SetResponse {
  string key = 1;
  string value = 2;
};

message GetTableRequest {
  string name = 1;
}

// TODO: FIXME We currently just return the CREATE TABLE query for the table,
// to avoid having to map the entire schema data structure to Protobuf.
message GetTableResponse {
  string sql = 1;
}